tests/testdata/48_stdlib/json.expect
=== json.parse object ===
true
chi
1
true
=== json.parse array ===
true
3
1
3
=== type checks ===
true
true
hello
true
false
=== has ===
true
false
=== to_array ===
3
=== kind display ===
object
array
null
=== typed parse ===
typed name=chi
typed version=1.7
=== typed parse jsonc ===
jsonc name=chi
jsonc numbers=[3, 5, 8]
=== non-comment parse catch ===
non-comment detail=syntax error
non-comment line=2
non-comment column=1
non-comment offset=2
non-comment error=JSON parse error: syntax error (line 2, column 1, offset 2)
=== non-comment parse ===
non-comment name=chi
=== typed parse field error ===
field detail=expected uint32, got string
field path=version.major
field error=JSON parse error: expected uint32, got string at path 'version.major'
=== parse_into ===
name=chi
version=1.7
alias=chi-lang
latest=2.0
history.length=2
history[0]=0.9
history[1]=1.0
numbers=[3, 5, 8]
active=true
count=42
ratio=2.5
done
